--- a/front/package.json
+++ b/front/package.json
@@ -4,14 +4,18 @@
   "private": true,
   "homepage": ".",
   "dependencies": {
+    "@headlessui/react": "^2.2.3",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.9.0",
     "framer-motion": "^12.12.1",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.1",
     "lucide-react": "^0.511.0",
     "react": "^19.1.0",
+    "react-colorful": "^5.6.1",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.6.0",
     "react-router-hash-link": "^2.4.3",
